--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
 <head>
   <title>Find-it</title>
 
+  <!-- External JS Files -->
+  <script src="http://maps.google.com/maps/api/js"></script>
+
+
   <!-- Internal BOWER Files -->
   <script src="angular/angular.js"></script>  
   <script src="angular-messages/angular-messages.js"></script>
@@ -10,6 +14,7 @@
   <script src="angular-jwt/dist/angular-jwt.js"></script>
   <script src="angular-resource/angular-resource.js"></script>
   <script src="jquery/dist/jquery.js"></script>
+  <script src="ngmap/build/scripts/ng-map.min.js"></script>
   <script src="bootstrap/dist/js/bootstrap.js"></script>
 
 
@@ -17,8 +22,12 @@
   <script src="./js/app.js"></script>
   <script src="./js/models/user.js"></script>
   <script src="./js/models/comment.js"></script>
+  <script src="./js/models/yelp.js"></script>
   <script src="./js/controllers/usersController.js"></script>
   <script src="./js/controllers/commentsController.js"></script>
+  <script src="./js/controllers/yelpsController.js"></script>
+  <script src="./js/controllers/mainController.js"></script>
+  <!-- <script src="./js/controllers/ngMapsController.js"></script> -->
   <script src="js/services/authInterceptor.js"></script>
   <script src="js/services/tokenService.js"></script>
   <script src="js/services/currentUser.js"></script>
@@ -67,8 +76,12 @@
               <a href="#" ui-sref="comment-create">New Comment</a>
             </li>
             <li ng-show="users.checkLoggedIn()">
+              <a href="#" ui-sref="yelp-search">Search</a>
+            </li>
+            <li ng-show="users.checkLoggedIn()">
               <a href="#" ui-sref="home" ng-click="users.logout()">Logout</a>
             </li>
+            
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
