adding comming windows

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,7 @@
   <script src="./js/models/yelp.js"></script>
   <script src="./js/controllers/usersController.js"></script>
   <script src="./js/controllers/commentsController.js"></script>
-  <script src="./js/controllers/yelpsController.js"></script>
   <script src="./js/controllers/mainController.js"></script>
-  <!-- <script src="./js/controllers/ngMapsController.js"></script> -->
   <script src="js/services/authInterceptor.js"></script>
   <script src="js/services/tokenService.js"></script>
   <script src="js/services/currentUser.js"></script>
@@ -54,7 +52,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#" ui-sref-active="active" ui-sref="home">Angular Authentication</a>
+          <a class="navbar-brand" href="#" ui-sref-active="active" ui-sref="home">Hippo</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
