--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,10 @@
   <script src="angular-resource/angular-resource.js"></script>
   <script src="jquery/dist/jquery.js"></script>
   <script src="ngmap/build/scripts/ng-map.min.js"></script>
+  <script src="angular-bootstrap/ui-bootstrap-tpls.js"></script> 
   <script src="bootstrap/dist/js/bootstrap.js"></script>
+
+
 
 
   <!-- Internal JS Files -->
@@ -26,7 +29,8 @@
   <script src="./js/controllers/usersController.js"></script>
   <script src="./js/controllers/commentsController.js"></script>
   <script src="./js/controllers/mainController.js"></script>
-  <script src="js/services/authInterceptor.js"></script>
+<!--   <script src="./js/controllers/modalController.js"></script>
+ -->  <script src="js/services/authInterceptor.js"></script>
   <script src="js/services/tokenService.js"></script>
   <script src="js/services/currentUser.js"></script>
 
